--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href=""><span>Web</span><span>Studio</span></a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -16,19 +16,21 @@
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
       <section>
         <h1>
-          Effective Solutions<br />
-          for Your Business
+          Effective Solutions for Your Business
         </h1>
-        <button>Order Service</button>
+        <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Strategy, Punctuality, Diligence</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -64,18 +66,18 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img .jpg" alt="foto Mark Guerrero" width="264" />
+            <img src="./images/mark.jpg" alt="foto Mark Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img (1).jpg" alt="foto Tom Ford" width="264" />
+            <img src="./images/tom.jpg" alt="foto Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/img (2).jpg"
+              src="./images/camila.jpg"
               alt="foto Camila Garcia"
               width="264"
             />
@@ -84,7 +86,7 @@
           </li>
           <li>
             <img
-              src="./images/img (3).jpg"
+              src="./images/daniel.jpg"
               alt="foto Daniel Wilson"
               width="264"
             />
@@ -95,10 +97,10 @@
       </section>
     </main>
     <footer>
-      <a href=""><span>Web</span><span>Studio</span></a>
+      <a href="./index.html"><Studio>WebStudio</span></a>
       <p>
-        Increase the flow of customers and<br />sales for your business with
-        digital<br />marketing & growth solutions.
+        Increase the flow of customers and sales for your business with
+        digital marketing & growth solutions.
       </p>
     </footer>
   </body>
