--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     </header>
     <main>
       <section>
-        <h1>
-          Effective Solutions for Your Business
-        </h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
@@ -97,10 +95,10 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html"><Studio>WebStudio</span></a>
+      <a href="./index.html">StudioWebStudio</a>
       <p>
-        Increase the flow of customers and sales for your business with
-        digital marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
